# zela-std

./: .gitignore  Cargo.toml  shell.nix
src/: lib.rs  sys.rs  zela.wit
src/rpc_client/: client.rs  config.rs  error.rs  filter.rs  mod.rs  pubsub.rs  request.rs  response.rs  util.rs
