[package]
name = "zela-std"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
wit-bindgen = { version = "0.45", default-features = false, features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
log = { version = "0.4" }

# dependencies for solana RpcClient clone
thiserror = "2.0"
semver = "1.0.26"
base64 = "0.22.1"
bincode = "1.3"
solana-sdk = "2.2"
solana-message = "2.2"
solana-transaction = "2.2"
solana-version = "2.2"
solana-account-decoder-client-types = { version = "2.2", features = ["zstd"] }
solana-transaction-status-client-types = "2.2"
solana-transaction-error = "2.2"
solana-inline-spl = "2.2"
futures-util = "0.3.31"

# here are dependencies of the examples
[dev-dependencies]
const_format = "0.2.34"
log = { version = "0.4" }
serde = { version = "1", features = ["derive"] }

[[example]]
name = "echo"
crate-type = ["cdylib"]
